[project]
name = "segformer_ultra_fast"
description = "Run Segformer at lightning speed for image/video segmentation."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["transformers>=4.54.0", "huggingface_hub", "numpy", "kornia", "pillow"]

[project.urls]
Repository = "https://github.com/lihaoyun6/ComfyUI-Segformer_Ultra_Fast"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/lihaoyun6/ComfyUI-Segformer_Ultra_Fast/wiki"
"Bug Tracker" = "https://github.com/lihaoyun6/ComfyUI-Segformer_Ultra_Fast/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Segformer_Ultra_Fast"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

